Fix overview graph width on mobile

--- a/web/src/sass/common.scss
+++ b/web/src/sass/common.scss
@@ -631,7 +631,6 @@ button {
 
 /* graphs */
 .graph-container {
-    width: 500px;
     height: 300px;
     z-index: 2;
     &.graph-fund-history {
