--- a/web/src/sass/large.scss
+++ b/web/src/sass/large.scss
@@ -127,6 +127,11 @@
     }
 }
 
+// graphs
+.graph-container {
+    width: 500px;
+}
+
 .page-overview {
     .table-flex {
         width: 890px;
